--- a/portfolio/src/components/FooterText/FooterText.css
+++ b/portfolio/src/components/FooterText/FooterText.css
@@ -1,8 +1,16 @@
 .footerTextContainer {
-    padding-bottom: 3rem;
+    padding-block: 3rem;
+    padding-inline: 1rem;
+    max-width: 90%;
+    
 }
 
 .footerTextContainer > p {
     text-align: center;
     line-height: 1.4rem;
+    font-size: clamp(0.9rem, 4vw, 1.2em);
+}
+
+.footerTextContainer > p > strong {
+    font-size: clamp(1rem, 4vw, 1.2em);
 }
