--- a/portfolio/src/components/Navbar/NavIcons/NavIcons.css
+++ b/portfolio/src/components/Navbar/NavIcons/NavIcons.css
@@ -5,5 +5,6 @@
 .navicon-li > a {
     text-decoration: none;
     color: var(--main-text-colour);
+    font-size: clamp(0.8rem, 1vw + 1rem, 1.5rem);
 }
 
