--- a/portfolio/src/components/Navbar/Navbar.css
+++ b/portfolio/src/components/Navbar/Navbar.css
@@ -5,6 +5,8 @@ nav {
     align-items: center;
 }
 
+
+
 .navbar-left-container, .navbar-right-container {
     display: flex;
     align-items: center;
@@ -13,7 +15,7 @@ nav {
 
 .navbar-left-container {
     width: 100%;
-    padding-bottom: 1rem; 
+    padding-bottom: 1.3rem; 
 }
 
 .navbar-right-container {
@@ -23,4 +25,21 @@ nav {
 nav {
     padding-top: 2rem;
     width: 80%;
+}
+
+@media only screen and (min-width: 400px) {
+    nav {
+        flex-direction: row;
+        justify-content: space-between;
+        width: 90%;
+    }
+    .navbar-left-container {        
+        padding-bottom: 0%; 
+        max-width: 30%;
+    }
+
+    .navbar-right-container {
+        width: 18%;
+    }
+    
 }
