--- a/portfolio/src/index.css
+++ b/portfolio/src/index.css
@@ -15,8 +15,10 @@
   */
   
   * {
+    box-sizing: border-box;
     margin: 0;
     padding: 0;
+    font: inherit;
   }
 
   /*
@@ -24,19 +26,18 @@
   */
   
   body {
-    height: 100vh;
-    width: 100vw;
     background-image: linear-gradient(var(--secondary-colour), var(--primary-colour), var(--primary-colour));
     color: var(--main-text-colour);
     font-family: 'Lato', sans-serif;
+    
+   
   }
 
-  #root {
-      height: 100%;
-      width: 100%;
+  #root {      
       display: flex;
       flex-direction: column;
       justify-content: space-between;
       align-items: center;
+      min-height: 100vh;
   }
 
