--- a/portfolio/src/components/FooterText/FooterText.css
+++ b/portfolio/src/components/FooterText/FooterText.css
@@ -1,15 +1,15 @@
 .footerTextContainer {
   padding-block: 3rem;
-  padding-inline: clamp();
+  padding-inline: 1em;
 }
 
 .footerTextContainer > p {
   text-align: center;
-  line-height: 1.4rem;
-  font-size: clamp(0.9rem, 4vw, 1.2em);
+  line-height: 1.4em;
+  font-size: clamp(0.9em, 4vw, 1.2em);
 }
 
 .footerTextContainer > p > strong {
-  font-size: clamp(1rem, 4vw, 1.2em);
+  font-size: clamp(1em, 4vw, 1.2em);
   font-weight: 700;
 }
