--- a/portfolio/src/components/Navbar/NavIcons/NavIcons.css
+++ b/portfolio/src/components/Navbar/NavIcons/NavIcons.css
@@ -1,10 +1,14 @@
 .navicon-li {
-    list-style: none;
+  list-style: none;
 }
 
 .navicon-li > a {
-    text-decoration: none;
-    color: var(--main-text-colour);
-    font-size: clamp(0.8rem, 1vw + 1rem, 1.5rem);
+  text-decoration: none;
+  color: var(--main-text-colour);
+  font-size: clamp(0.8rem, 1vw + 1rem, 1.5rem);
 }
 
+.navicon-li:hover {
+  transform: scale(120%);
+  cursor: pointer;
+}
