--- a/portfolio/src/components/AboutMe/AboutMe.css
+++ b/portfolio/src/components/AboutMe/AboutMe.css
@@ -1,13 +1,14 @@
 .aboutMe {
   display: grid;
-  grid-template-rows: repeat(2, 1fr);
+  grid-template-rows: 1fr 1.2fr;
   justify-items: center;
-  align-items: center;
+  align-items: start;
   row-gap: 1rem;
 }
 
 .image-container {
-  padding-top: 1rem;
+  padding-top: 4rem;
+  padding-bottom: 2rem;
   display: flex;
   flex-direction: column;
   justify-items: center;
@@ -38,7 +39,6 @@
   display: flex;
   flex-direction: column;
   row-gap: 1rem;
-  padding-bottom: 4rem;
 }
 
 .info-container > h2 {
