--- a/portfolio/src/components/Navbar/NavIcons/NavIcons.css
+++ b/portfolio/src/components/Navbar/NavIcons/NavIcons.css
@@ -5,7 +5,7 @@
 .navicon-li > a {
   text-decoration: none;
   color: var(--main-text-colour);
-  font-size: clamp(0.8rem, 1vw + 1rem, 1.5rem);
+  font-size: var(--f-size-400);
 }
 
 .navicon-li:hover {
