--- a/portfolio/src/components/Portfolio/Portfolio.css
+++ b/portfolio/src/components/Portfolio/Portfolio.css
@@ -4,39 +4,55 @@
   justify-content: center;
   align-items: center;
   padding-block: 4rem;
+  width: min(600px, 90%);
 }
 
 .portfolio-container {
   display: grid;
-  /* grid-template-columns: repeat(2, 1fr); */
   grid-template-rows: repeat(4, 1fr);
-  gap: 3rem;
+  gap: 1.5rem;
 }
 
 .portfolio-item-container {
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  border: 1px solid var(--secondary-text-colour);
   border-radius: 1rem;
+  position: relative;
 }
 
 .portfolio-item-text-container {
   background-color: var(--alt-colour-1);
   border-radius: 0 0 1rem 1rem;
-  padding-block: 1.5rem;
+  padding-block: 1rem;
   padding-inline: 1rem;
 }
 
+.portfolio-item-container:hover > .portfolio-item-img {
+  display: none;
+}
+
+.portfolio-item-container:hover > .portfolio-item-img-hover {
+  display: block;
+  max-width: 100%;
+  height: auto;
+  opacity: 0.8;
+  border-radius: 1rem 1rem 0 0;
+}
+
+.portfolio-item-container:hover {
+  cursor: pointer;
+  transform: scale(102%);
+  transition: 0.5s ease;
+}
+
 .portfolio-title {
-  font-size: 2.5rem;
+  font-size: var(--f-size-800);
   padding-bottom: 2rem;
-  font-weight: 600;
+  font-weight: 400;
 }
 
 .portfolio-item-heading {
-  font-size: 1.5rem;
+  font-size: var(--f-size-400);
   font-weight: 600;
   padding-bottom: 0.5rem;
   text-align: center;
@@ -45,12 +61,50 @@
 
 .portfolio-item-text {
   text-align: center;
-  line-height: 1.5rem;
+  line-height: 1.2rem;
   color: var(--secondary-text-colour);
+  font-size: var(--f-size-300);
+  font-weight: 300;
 }
 
 .portfolio-item-img {
-  max-width: 100%;
-
+  width: max(100%);
+  display: block;
   border-radius: 1rem 1rem 0 0;
+}
+
+.portfolio-item-link-container {
+  transition: 1s ease;
+  opacity: 0;
+  position: absolute;
+  top: 40%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  text-align: center;
+}
+
+.portfolio-item-link-text {
+  background-color: var(--alt-colour-1);
+  font-size: var(--f-size-400);
+  padding-inline: 1rem;
+  padding-block: 1rem;
+  color: var(--secondary-colour);
+  text-decoration: none;
+  border-radius: 0.3rem;
+}
+
+.portfolio-item-container:hover:hover > .portfolio-item-link-container {
+  opacity: 1;
+}
+
+.portfolio-item-img-hover {
+  display: none;
+}
+
+@media only screen and (min-width: 500px) {
+  .portfolio-container {
+    grid-template-rows: repeat(2, 1fr);
+    grid-template-columns: repeat(2, 1fr);
+  }
 }
