--- a/portfolio/src/components/Title/Title.css
+++ b/portfolio/src/components/Title/Title.css
@@ -1,7 +1,7 @@
 .title-container {
-    padding-top: 2rem;
+  padding-top: 2rem;
 }
 
 .title-container > h1 {
-    font-size: clamp(2.8rem, 10vw + 1rem, 6rem );
+  font-size: var(--f-size-900);
 }
