--- a/portfolio/src/components/App/App.css
+++ b/portfolio/src/components/App/App.css
@@ -1,13 +1,15 @@
-.navbar-container, main, footer {
+.navbar-container,
+main,
+footer {
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 90%;      
+  width: 90%;
 }
 
 footer {
-  background-color: var(--alt-colour-1);
+  background-color: var(--primary-colour);
   color: var(--secondary-text-colour);
   width: 100%;
+  height: 4rem;
 }
-
