--- a/portfolio/src/components/AboutMe/AboutMe.css
+++ b/portfolio/src/components/AboutMe/AboutMe.css
@@ -1,13 +1,13 @@
 .aboutMe {
   display: grid;
-  grid-template-rows: 1fr 1.2fr 1fr 1fr;
+  grid-template-rows: repeat(4, 1fr);
   justify-items: center;
   align-items: center;
   row-gap: 1rem;
   width: min(100%, 1200px);
-  padding-top: 6rem;
-  padding-bottom: 2rem;
-  padding-right: 6rem;
+  padding-top: 1em;
+  padding-bottom: 1rem;
+  padding-inline: 1rem;
   background-color: var(--dark-bg-colour);
   color: var(--light-text-colour);
   border-radius: 1rem;
@@ -147,7 +147,7 @@
 }
 
 .aboutMe-button-container {
-  grid-column-start: 2;
+ /* grid-column-start: 2;*/
   display: flex;
   flex-direction: row;
   justify-content: space-between;
