--- a/portfolio/src/components/AboutMe/AboutMe.css
+++ b/portfolio/src/components/AboutMe/AboutMe.css
@@ -1,16 +1,16 @@
 .aboutMe {
   display: grid;
-  grid-template-rows: repeat(4, 1fr);
   justify-items: center;
   align-items: center;
   row-gap: 1rem;
   width: min(100%, 1200px);
-  padding-top: 1em;
+  /* margin-block: 1rem; */
+  padding-top: 2em;
   padding-bottom: 1rem;
   padding-inline: 1rem;
   background-color: var(--dark-bg-colour);
   color: var(--light-text-colour);
-  border-radius: 1rem;
+  /* border-radius: 1rem; */
   box-shadow: 0 4px 6px 0 hsla(0, 0%, 0%, 0.3);
   border-top: 6px solid var(--accent-colour-light);
 }
@@ -147,7 +147,7 @@
 }
 
 .aboutMe-button-container {
- /* grid-column-start: 2;*/
+  /* grid-column-start: 2;*/
   display: flex;
   flex-direction: row;
   justify-content: space-between;
