--- a/portfolio/src/components/App/App.css
+++ b/portfolio/src/components/App/App.css
@@ -1,5 +1,4 @@
 .navbar-container,
-main,
 footer {
   display: flex;
   justify-content: center;
@@ -12,4 +11,11 @@ footer {
   color: var(--secondary-text-colour);
   width: 100%;
   height: 4rem;
+}
+
+main {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: min(800px, 90%);
 }
