--- a/portfolio/src/components/Portfolio/Portfolio.css
+++ b/portfolio/src/components/Portfolio/Portfolio.css
@@ -1,105 +1,32 @@
 .portfolio-section {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  padding-block: 4rem;
-  width: min(600px, 90%);
+  padding-top: 4rem;
 }
 
 .portfolio-container {
   display: grid;
   grid-template-rows: repeat(4, 1fr);
   gap: 1.5rem;
+  padding-block: 2rem;
+  border-top: 2px dashed var(--accent-colour-light);
 }
 
 .portfolio-item-container {
-  display: flex;
-  flex-direction: column;
-  border-radius: 1rem;
+  display: grid;
+  grid-template-rows: 1fr 1.5fr 0.2fr;
+  grid-template-columns: 1fr 1fr;
+  border-radius: 0.5rem;
+  justify-content: center;
+  align-items: center;
   position: relative;
-}
-
-.portfolio-item-text-container {
-  background-color: var(--alt-colour-1);
-  border-radius: 0 0 1rem 1rem;
-  padding-block: 1rem;
-  padding-inline: 1rem;
-}
-
-.portfolio-item-container:hover > .portfolio-item-img {
-  display: none;
-}
-
-.portfolio-item-container:hover > .portfolio-item-img-hover {
-  display: block;
-  max-width: 100%;
-  height: auto;
-  opacity: 0.8;
-  border-radius: 1rem 1rem 0 0;
-}
-
-.portfolio-item-container:hover {
-  cursor: pointer;
-  transform: scale(102%);
-  transition: 0.5s ease;
+  box-shadow: 0 5px 25px var(--accent-colour-light-shade);
+  padding: 1rem;
 }
 
 .portfolio-title {
   font-size: var(--f-size-800);
-  padding-bottom: 2rem;
+  padding-bottom: 1rem;
   font-weight: 400;
-}
-
-.portfolio-item-heading {
-  font-size: var(--f-size-400);
-  font-weight: 600;
-  padding-bottom: 0.5rem;
-  text-align: center;
-  color: var(--secondary-text-colour);
-}
-
-.portfolio-item-text {
-  text-align: center;
-  line-height: 1.2rem;
-  color: var(--secondary-text-colour);
-  font-size: var(--f-size-300);
-  font-weight: 300;
-}
-
-.portfolio-item-img {
-  width: max(100%);
-  display: block;
-  border-radius: 1rem 1rem 0 0;
-}
-
-.portfolio-item-link-container {
-  transition: 1s ease;
-  opacity: 0;
-  position: absolute;
-  top: 40%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  -ms-transform: translate(-50%, -50%);
-  text-align: center;
-}
-
-.portfolio-item-link-text {
-  background-color: var(--alt-colour-1);
-  font-size: var(--f-size-400);
-  padding-inline: 1rem;
-  padding-block: 1rem;
-  color: var(--secondary-colour);
-  text-decoration: none;
-  border-radius: 0.3rem;
-}
-
-.portfolio-item-container:hover:hover > .portfolio-item-link-container {
-  opacity: 1;
-}
-
-.portfolio-item-img-hover {
-  display: none;
+  align-self: start;
 }
 
 @media only screen and (min-width: 500px) {
