--- a/portfolio/src/components/AboutMe/AboutMe.css
+++ b/portfolio/src/components/AboutMe/AboutMe.css
@@ -3,7 +3,7 @@
   justify-items: center;
   align-items: center;
   row-gap: 1rem;
-  width: min(100%, 1200px);
+  width: max(100%, 1200px);
   /* margin-block: 1rem; */
   padding-top: 2em;
   padding-bottom: 1rem;
@@ -65,7 +65,6 @@
 }
 
 .aboutMe-button-container {
-  /* grid-column-start: 2;*/
   display: flex;
   flex-direction: row;
   justify-content: center;
@@ -83,7 +82,7 @@
   font-weight: 600;
   border: none;
   border-radius: 0.3rem;
-  box-shadow: 0 4px 6px 0 hsla(0, 0%, 0%, 0.2);
+  box-shadow: 0 4px 6px 0 hsla(0, 0%, 0%, 0.1);
   background-color: var(--primary-colour);
   color: var(--light-text-colour);
 }
@@ -103,7 +102,7 @@
   border-radius: 0.3rem;
   box-shadow: 0 4px 6px 0 hsla(0, 0%, 0%, 0.2);
   background-color: var(--light-bg-colour);
-  transform: scale(104%);
+
   border: 2px solid var(--accent-colour-light);
   color: var(--primary-colour);
 }
