--- a/portfolio/src/components/FooterText/FooterText.css
+++ b/portfolio/src/components/FooterText/FooterText.css
@@ -1,4 +1,4 @@
-.footerTextContainer {
+/* .footerTextContainer {
   padding-block: 3rem;
   padding-inline: 1em;
   width: min(100%, 800px);
@@ -19,4 +19,16 @@
 .footerTextContainer > p > em {
   font-style: italic;
   font-weight: 400;
+} */
+
+.footerTextContainer {
+  width: 100%;
+}
+
+.footerTextContainer > ul {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
+  padding-right: 1.5rem;
+  gap: 1rem;
 }
