--- a/portfolio/src/components/Navbar/NavLinks/NavLinks.css
+++ b/portfolio/src/components/Navbar/NavLinks/NavLinks.css
@@ -10,21 +10,17 @@
   padding-inline: 0.2rem;
 }
 
-.navlink-li:hover {
+.inactiveLink:hover {
   transform: scale(105%);
   cursor: pointer;
 }
 
 .activeLink {
-  /* background-color: var(--alt-colour-1); */
   color: var(--dark-text-colour);
   text-decoration: none;
   font-size: var(--f-size-300);
   padding-bottom: 0.3rem;
   padding-inline: 0.2rem;
-
-  /* border-radius: 0.3rem; */
-  /* font-weight: 600; */
   border-bottom: 3px solid var(--accent-colour-light);
 }
 
