--- a/portfolio/src/components/Portfolio/Portfolio.css
+++ b/portfolio/src/components/Portfolio/Portfolio.css
@@ -1,12 +1,11 @@
 .portfolio-section {
-  padding-top: 4rem;
+  padding-top: 1.5rem;
 }
 
 .portfolio-container {
   display: grid;
-  grid-template-rows: repeat(4, 1fr);
   gap: 1.5rem;
-  padding-block: 2rem;
+  padding-block: 1.5rem;
   border-top: 2px dashed var(--accent-colour-light);
 }
 
@@ -22,8 +21,33 @@
   padding: 1rem;
 }
 
-.portfolio-title {
+.portfolio-intro-container {
+  padding-top: 2rem;
+  padding-bottom: 1rem;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  font-size: var(--f-size-300);
+}
+
+.portfolio-intro-container > p > a {
+  color: var(--primary-colour);
+  font-weight: 400;
+  text-decoration: none;
+}
+
+.portfolio-intro-container > p > a:hover {
+  text-decoration: underline;
+}
+
+.portfolio-intro-container > h1 {
   font-size: var(--f-size-800);
+  color: var(--primary-colour);
+  font-weight: 600;
+}
+
+.portfolio-title {
+  font-size: var(--f-size-600);
   padding-bottom: 1rem;
   font-weight: 400;
   align-self: start;
@@ -31,7 +55,7 @@
 
 @media only screen and (min-width: 500px) {
   .portfolio-container {
-    grid-template-rows: repeat(2, 1fr);
+    grid-auto-rows: 1fr;
     grid-template-columns: repeat(2, 1fr);
   }
 }
