Adding content to portfolio items.  Added html parser as an npm dependency so that html tags included in strings in the portfolioItems libs file will be rendered instead of plain text

--- a/portfolio/src/components/Portfolio/PortfolioItem/PortfolioItem.css
+++ b/portfolio/src/components/Portfolio/PortfolioItem/PortfolioItem.css
@@ -1,3 +1,11 @@
+.portfolio-item-container {
+  height: 25rem;
+}
+
+strong {
+  font-weight: bold;
+}
+
 .portfolio-item-text {
   display: flex;
   flex-direction: column;
